--- a/src/app/pages/dashboard/kitten/kitten.component.html
+++ b/src/app/pages/dashboard/kitten/kitten.component.html
@@ -4,10 +4,15 @@
 
     <div class="details">
       <div class="title">
-        React Native UI Kitten
+        Nick Jones
       </div>
       <div class="description">
-        React Native UI Kitten is a framework that contains a set of commonly used UI components styled in a similar way. The most awesome thing: you can change themes on the fly by just passing a different set of variables. 100% native. Give our kitten a try!
+        Docente de asdasdas awdasd asd adasd asdasassdasd asdadsadasdasd wawasfasdasdasef
+
+      </div>
+      <div class="properties">
+        <li>Edad:25</li>
+        <li>Email:njones@gmail.com</li>
       </div>
     </div>
   </nb-card-body>
