--- a/src/app/pages/dashboard/contacts/contacts.component.html
+++ b/src/app/pages/dashboard/contacts/contacts.component.html
@@ -1,16 +1,12 @@
 <nb-card [size]="breakpoint.width >= breakpoints.xxxl || breakpoint.width < breakpoints.md ? 'large' : 'xlarge'">
   <nb-tabset fullWidth>
-    <nb-tab tabTitle="Contacts">
-      <div class="contact" *ngFor="let c of contacts">
-        <nb-user [picture]="c.user.picture" [name]="c.user.name" [title]="c.type" size="large"></nb-user>
-        <i class="i-contact nb-phone"></i>
+    <nb-tab tabTitle="Instituciones">
+      <div class="contact" *ngFor="let p of instituciones">
+        <nb-user  [name]="p.Nombre"  size="large"></nb-user>
+
       </div>
     </nb-tab>
-    <nb-tab tabTitle="Recent">
-      <div class="contact" *ngFor="let c of recent">
-        <nb-user [picture]="c.user.picture" [name]="c.user.name" [title]="c.type" size="large"></nb-user>
-        <span class="time">{{ c.time }}</span>
-      </div>
-    </nb-tab>
+
   </nb-tabset>
+  
 </nb-card>
