--- a/src/app/pages/forms/form-inputs/form-inputs.component.html
+++ b/src/app/pages/forms/form-inputs/form-inputs.component.html
@@ -64,10 +64,10 @@
           </span>
         </div>
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search for...">
+          <input type="text" class="form-control" placeholder="Buscar...">
           <span class="input-group-btn">
             <button class="btn btn-danger">
-              Search
+              Buscar
             </button>
           </span>
         </div>
@@ -168,11 +168,11 @@
           <div class="demo-checkboxes col-sm-4">
             <nb-checkbox>Checkbox 1</nb-checkbox>
             <nb-checkbox [value]="true">Checkbox 2</nb-checkbox>
-            <label class="custom-control custom-checkbox">
-              <input type="checkbox" class="custom-control-input">
-              <span class="custom-control-indicator"></span>
-              <span class="custom-control-description">Bootstrap Checkbox</span>
-            </label>
+              <label class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input">
+                <span class="custom-control-indicator"></span>
+                <span class="custom-control-description">Bootstrap Checkbox</span>
+              </label>
           </div>
           <div class="demo-radio col-sm-4">
             <label class="custom-control custom-radio">
