--- a/src/app/pages/instituciones/crear/form-crear.component.html
+++ b/src/app/pages/instituciones/crear/form-crear.component.html
@@ -2,31 +2,50 @@
     <nb-card>
       <nb-card-header>Institución</nb-card-header>
       <nb-card-body>
-        <form>
-          <div class="form-group">
-            <label>Simple Select</label>
-            <select type="number" class="form-control" [(ngModel)]="selectedHero" (ngModelChange)="onSelect()">
-              <option *ngFor="let hero of heroes" [ngValue]="hero.id">{{hero.name}}</option>
-
-            </select>
-          </div>
             <div class="form-group">
-                <label for="sel">{{selectedHero}}</label>
-
-            </div>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-          </div>
-          <div class="form-group">
-            <nb-checkbox>Check me out</nb-checkbox>
-          </div>
-          <button type="submit" class="btn btn-danger">Enviar</button>
-        </form>
+            <label>Nombre</label>
+            <input #Nombre  class="form-control"/>
+            <label>Descripción</label>
+            <input #Descripcion   class="form-control"/>
+            <label>Código DANE</label>
+            <input #CodigoDane  class="form-control"/>
+            <label>Código DANE principal</label>
+            <input #CodigoDanePrincipal    class="form-control"/>
+            <label>Principal</label>
+            <select [(ngModel)]="selectedPrincipal" class="form-control">
+              <option value="1">Si</option>
+              <option value="0">No</option>
+            </select>
+            <label>Tipo Institución</label>
+            <select [(ngModel)]="selectedTipoInstitucion" class="form-control">
+              <option *ngFor="let tipoInstitucion of tiposInstituciones" [ngValue]="tipoInstitucion">{{tipoInstitucion.Nombre}}</option>
+            </select>
+            <label>Cantidad Manipuladoras</label>
+            <input #CantidadManipuladoras class="form-control"/>
+            <label>ETC</label>
+            <select [(ngModel)]="selectedEtc" class="form-control">
+              <option *ngFor="let etc of etcs" [ngValue]="etc">{{etc.Nombre}}</option>
+            </select>
+            <label>Departamento</label>
+            <select [(ngModel)]="selectedDepartamento" class="form-control" (change)="departamentoChanged()" >
+              <option *ngFor="let departamento of departamentos" [ngValue]="departamento">{{departamento.Nombre}}</option>
+            </select>
+            <label>Municipio</label>
+            <select [(ngModel)]="selectedMunicipio" class="form-control"  >
+              <option *ngFor="let municipio of municipiosFiltrados" [ngValue]="municipio">{{municipio.Nombre}}</option>
+            </select>
+            <label>Tipo Minuta</label>
+            <select [(ngModel)]="selectedTipoMinuta" class="form-control"  >
+              <option *ngFor="let tipoMinuta of tiposMinutas" [ngValue]="tipoMinuta">{{tipoMinuta.Nombre}}</option>
+            </select>
+            <label>Tipo Modalidad</label>
+            <select [(ngModel)]="selectedTipoModalidad" class="form-control"  >
+              <option *ngFor="let tipoModalidad of tiposModalidades" [ngValue]="tipoModalidad">{{tipoModalidad.Nombre}}</option>
+            </select>
+            <button (click)="add(Nombre.value, Descripcion.value, CodigoDane.value, CodigoDanePrincipal.value, CantidadManipuladoras.value); Nombre.value=''; CodigoDane.value=''">
+              Enviar
+            </button>
+        </div>
       </nb-card-body>
     </nb-card>
   </div>
