--- a/src/app/pages/alimentos/proveedores/proveedores.component.html
+++ b/src/app/pages/alimentos/proveedores/proveedores.component.html
@@ -39,9 +39,19 @@
 
         <div class="form-group">
           <label>Producto</label>
-          <select [(ngModel)]="selectedValue">
+          <select [(ngModel)]="selectedValue" class="form-control">
             <option *ngFor="let p of productos" [ngValue]="p">{{p.Nombre}}</option>
           </select>
+        </div>
+        <div class="form-group">
+          <label>Unidades Medida</label>
+          <select [(ngModel)]="selectedUnidadMedida" class="form-control">
+            <option *ngFor="let u of unidadMedidas" [ngValue]="p">{{u.Nombre}}</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label>Valor</label>
+            <input #Valor class="form-control" />
         </div>
         <button (click)="addProducto();">
           Añadir
