--- a/src/app/pages/instituciones/dashboard/dashboard.component.scss
+++ b/src/app/pages/instituciones/dashboard/dashboard.component.scss
@@ -3,6 +3,17 @@
 @import '~@nebular/theme/styles/global/bootstrap/breakpoints';
 
 @include nb-install-component() {
+  ngx-echarts-pie,
+  ngx-echarts-bar,
+  ngx-echarts-line,
+  ngx-echarts-multiple-xaxis,
+  ngx-echarts-area-stack,
+  ngx-echarts-bar-animation,
+  ngx-echarts-radar {
+    display: block;
+    height: nb-theme(card-height-medium);
+    width: 100%;
+  }
   .solar-card nb-card-header {
     border: none;
     padding-bottom: 0;
@@ -18,5 +29,9 @@
     /deep/ nb-card.large-card {
       height: nb-theme(card-height-medium);
     }
+  }
+  /deep/ .echart {
+    height: 100%;
+    width: 100%;
   }
 }
