--- a/src/app/pages/instituciones/formulario/formulario.component.html
+++ b/src/app/pages/instituciones/formulario/formulario.component.html
@@ -42,7 +42,13 @@
             <select [(ngModel)]="selectedTipoModalidad" class="form-control"  >
               <option *ngFor="let tipoModalidad of tiposModalidades" [ngValue]="tipoModalidad">{{tipoModalidad.Nombre}}</option>
             </select>
-            <button (click)="add(Nombre.value, Descripcion.value, CodigoDane.value, CodigoDanePrincipal.value, CantidadManipuladoras.value); Nombre.value=''; CodigoDane.value=''">
+            <label>Longitud</label>
+            <input #Longitud class="form-control"/>
+            <label>Latitud</label>
+            <input #Latitud class="form-control"/>
+            <label>Indicaciones</label>
+            <textarea rows="5" #Indicaciones  class="form-control"></textarea>
+            <button (click)="add(Nombre.value, Descripcion.value, CodigoDane.value, CodigoDanePrincipal.value, CantidadManipuladoras.value, Longitud.value, Latitud.value, Indicaciones.value); Nombre.value=''; CodigoDane.value=''">
               Enviar
             </button>
         </div>
