--- a/src/app/pages/instituciones/cupos/cupos.component.scss
+++ b/src/app/pages/instituciones/cupos/cupos.component.scss
@@ -1,8 +1,7 @@
 @import '../../../@theme/styles/themes';
 
 @include nb-install-component() {
-  ngx-echarts-pie,
- {
+  ngx-echarts-pie {
     display: block;
     height: nb-theme(card-height-medium);
     width: 100%;
