--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -4,7 +4,7 @@
 // framework component themes (styles tied to theme variables)
 @import '~@nebular/theme/styles/globals';
 @import '~@nebular/auth/styles/all';
-
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';  
 // install the framework and custom global styles
 @include nb-install() {
 
