--- a/src/app/pages/instituciones/kitten/kitten.component.html
+++ b/src/app/pages/instituciones/kitten/kitten.component.html
@@ -8,8 +8,8 @@
       {{institucion.Nombre}}
       </div>
       <div class="description">
-      {{institucion.Descripcion}}
       </div>
+      {{institucion.Descripcion}}
       <div class="properties">
         <li>{{institucion.CodigoDane}}</li>
         <li *ngIf="municipio">{{municipio.Nombre}}</li>
@@ -21,8 +21,8 @@
 
 
   <nb-card-footer>
-    <a href="https://akveo.github.io/react-native-ui-kitten" target="_blank">
-      <i class="ion-ios-world"></i>
+    <a routerLink="/pages/instituciones/editar/{{institucion.id}}">
+      <i class="nb-edit"></i>
     </a>
     <a href="https://itunes.apple.com/us/app/kitten-tricks/id1246143230" target="_blank">
       <i class="ion-social-apple"></i>
