--- a/src/app/pages/instituciones/kitten/kitten.component.html
+++ b/src/app/pages/instituciones/kitten/kitten.component.html
@@ -4,8 +4,9 @@
     <div class="picture"  style.background-image="url('assets/images/kitten-{{currentTheme}}.png')"></div>
 
     <div class="details">
+    
       <div class="title">
-      {{institucion.Nombre}}
+       {{institucion.Nombre}}
       </div>
       <div class="description">
       </div>
@@ -21,7 +22,7 @@
 
 
   <nb-card-footer>
-    <a routerLink="/pages/instituciones/editar/{{institucion.id}}">
+    <a routerLink="/pages/instituciones/editar/{{institucion.Id}}">
       <i class="nb-edit"></i>
     </a>
     <a href="https://itunes.apple.com/us/app/kitten-tricks/id1246143230" target="_blank">
