--- a/src/app/pages/alimentos/menus/menus.component.html
+++ b/src/app/pages/alimentos/menus/menus.component.html
@@ -56,8 +56,8 @@
   </nb-card-header>
 
   <nb-card-body>
-    <div class="componentesPreparacion" *ngFor="let preparacionComponente of preparacionesComponente">
-      <nb-user  [name]="preparacionComponente.PreparacionId.Nombre"   size="large"></nb-user>
+    <div class="componentesPreparacion" *ngFor="let preparacionComponente of preparaciones">
+      <nb-user  [name]="preparacionComponente.Nombre"   size="large"></nb-user>
 
 
     </div>
